admin backend doesn't work in flatpak
@oholy
Submitted by Ondrej Holy Assigned to Cosimo Cecchi @cosimoc
Link to original bug (#784893)
Description
Polkit authorization checks rely on process pid, but it seems that peer credentials can't be obtained from dbus in flatpak probably...
If you try to open admin:/// e.g. in gedit it fails with the following: GDBus.Error:org.freedesktop.PolicyKit1.Error.Failed: Unix process subject does not have uid set
and gvfs debug log contains a lot of: GLib-GIO-CRITICAL **: g_credentials_get_unix_pid: assertion 'G_IS_CREDENTIALS (credentials)' failed
because g_dbus_connection_get_peer_credentials returns NULL in flatpak.
Version: git master