admin: Fail when peer credentials are not available

Currently, critical errors are printed when peer credentials aren't
available (i.e. session bus fallback is used). Let's return an error
immediately to prevent the criticals. Also add warning with suggestion
to allow `--filesystem=xdg-run/gvfsd` access.

https://gitlab.gnome.org/GNOME/gvfs/-/issues/305